--- a/package.json
+++ b/package.json
@@ -3,8 +3,17 @@
   "version": "0.0.1",
   "description": "Layer 2 blockchain voting",
   "main": "index.js",
+  "engines": {
+    "node": "14.*"
+  },
+  "engineStrict": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rm -R node_modules",
+    "dist": "npm run webpack:prod",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "webpack": "webpack --mode development",
+    "webpack:prod": "webpack --mode production",
+    "webpack:watch": "webpack --mode development --watch"
   },
   "repository": {
     "type": "git",
@@ -21,5 +30,16 @@
   "bugs": {
     "url": "https://github.com/xgmstudio/votemining/issues"
   },
-  "homepage": "https://github.com/xgmstudio/votemining#readme"
+  "homepage": "https://github.com/xgmstudio/votemining#readme",
+  "dependencies": {
+    "web3": "^1.3.4"
+  },
+  "devDependencies": {
+    "@types/node": "^14.11.8",
+    "ts-loader": "^8.0.5",
+    "ts-node": "^9.0.0",
+    "typescript": "^4.0.3",
+    "webpack": "^5.1.3",
+    "webpack-cli": "^4.5.0"
+  }
 }
